propertee-core/src/test/resources/tests/102_error_unwrap_nonresult.expected
before
Runtime error: Runtime Error at line 4:4: UNWRAP() requires a Result
