propertee-core/src/test/resources/tests/102_error_unwrap_nonresult.tee
// spec v0.10.0: UNWRAP rejects values that are not genuine Results
forged = {"status": "done", "ok": true, "value": 1}
PRINT("before")
x = UNWRAP(forged)
PRINT("unreachable")
